--- a/style.css
+++ b/style.css
@@ -1,17 +1,4 @@
-p{
-  display: inline-block;
-  font-size: 36px;
-  font-weight: bold;
-  color: red;
-  margin-right: 10px;
-};
-
-h1 {
-  display: inline-block;
-  width: 200px;
-};
-
-button {
-  display: block;
-  background-color: blue;
+body {
+  height: 2000px;
+  width: 2000px;
 }
